# memento-mcp-server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  context-keeper.yaml  context-server.yaml  context_keeper.py  docker-compose.yml  fix_fts_schema.py  memento.yaml  pyproject.toml  refresh_fts.py  run_mcp_context_keeper.py  run_mcp_memento.py  server.json  setup.py  test_new_database.py
.github/workflows/: publish-mcp-registry.yml  zed-stub-dev.yml  zed-stub-release.yml
.mcp-memento/: config.yaml
context_keeper/: __init__.py  cli.py  config.py  models.py  server.py
context_keeper/database/: engine.py  interface.py
context_keeper/tools/: activity_tools.py  definitions.py  error_handling.py  guide_tools.py  memory_tools.py  registry.py  search_tools.py
context_server/: __init__.py  cli.py  config.py  models.py  server.py  sqlite_database.py
context_server/backends/: __init__.py  factory.py  sqlite_fallback.py
context_server/tools/: guide_tools.py  memory_tools.py  registry.py  relationship_tools.py
context_server/utils/: __init__.py  export_import.py  simple_graph.py
docs/: AGENT_CONFIGURATION.md  DECAY_SYSTEM.md  DEV.md  INTEGRATION.md  PYTHON_API.md  RELATIONSHIPS.md  RULES.md  SCHEMA.md  TEMPLATES.md  TOOLS.md  zed_mcp_config.json
docs/dev/: DEV.md  README.md  SCHEMA.md
docs/extensions/: ZED.md
docs/integrations/: AGENT.md  API.md  IDE.md  PYTHON.md
examples/: confidence_system_demo.py
integrations/zed/: .gitignore  Cargo.toml  DEV.md  README.md  extension.toml
integrations/zed/bootstrap/: mcp_memento_bootstrap.py
integrations/zed/src/: lib.rs
integrations/zed/stub/: Cargo.toml
integrations/zed/stub/src/: main.rs
mcp_context_keeper/: __init__.py  context_keeper.py  exceptions.py  models.py  storage.py
mcp_context_keeper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mcp_context_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: README.md  build.bat  build.sh  build_memento.py  deploy.py
src/context_keeper/: __init__.py  __main__.py  advanced_tools.py  cli.py  models.py  relationships.py
src/context_keeper/database/: engine.py
src/context_keeper/tools/: confidence_tools.py  relationship_tools.py  search_tools.py
src/context_keeper/utils/: export_import.py
src/mcp_memento.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/memento/: __init__.py  __main__.py  advanced_tools.py  cli.py  config.py  models.py  relationships.py  server.py
src/memento/database/: __init__.py  base.py  engine.py  interface.py
src/memento/tools/: __init__.py  activity_tools.py  confidence_tools.py  definitions.py  error_handling.py  guide_tools.py  memory_tools.py  registry.py  relationship_tools.py  search_tools.py
src/memento/utils/: __init__.py  export_import.py  memory_parser.py  validation.py
test/: README.md  run_tests.bat  run_tests.py  run_tests.sh  test_import.json  test_relationships.py  test_tools.py
tests/: README.md  run_tests.bat  run_tests.py  run_tests.sh  test_basic.py  test_bug_regressions.py  test_cli.py  test_confidence_system.py  test_fts_integration.py  test_relationships.py  test_server_startup.py  test_standard_pytest.py  test_tools.py
tests/utils/: __init__.py  fix_fts_schema.py  refresh_fts.py  test_fts_standalone.py  test_new_database_standalone.py
user_memory/: advanced_tools.py  config.py  models.py
user_memory/backends/: __init__.py
user_memory/tools/: __init__.py  activity_tools.py  search_tools.py
user_memory/utils/: graph_algorithms.py
