[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-memento"
version = "0.1.17"
description = "MCP Memento for contextual memory management"
authors = [
    {name = "Hannibal", email = "annibale.x@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.23.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0.0",
    "pyyaml>=6.0.0",
    "aiosqlite>=0.20.0"
]

[project.scripts]
memento = "memento.cli:main"
mcp-memento = "memento.cli:main"

[project.gui-scripts]
memento-gui = "memento.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["memento*"]

[tool.setuptools.package-data]
"memento" = ["*.yaml", "*.yml", "*.sql", "*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = [".agent", ".data", ".pytest_cache", ".serena", "docs", "utils"]
addopts = "--asyncio-mode=auto"
