[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-memento"
version = "0.1.20"
description = "MCP Memento for contextual memory management"
authors = [
    {name = "Hannibal", email = "annibale.x@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.23.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0.0",
    "pyyaml>=6.0.0",
    "aiosqlite>=0.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.scripts]
memento = "memento.cli:main"
mcp-memento = "memento.cli:main"

[project.gui-scripts]
memento-gui = "memento.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["memento*"]

[tool.setuptools.package-data]
"memento" = ["*.yaml", "*.yml", "*.sql", "*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = [".agent", ".data", ".pytest_cache", ".serena", "docs", "utils"]
addopts = "--asyncio-mode=auto"
filterwarnings = [
    "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning",
    "ignore:coroutine 'main' was never awaited:RuntimeWarning",
]
