[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-memento"
version = "0.2.13"
description = "Intelligent persistent memory for AI agents and IDEs via Model Context Protocol (MCP)."
readme = "README.md"
authors = [
    {name = "Hannibal", email = "annibale.x@gmail.com"}
]
requires-python = ">=3.10"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["mcp", "memory", "ai", "context", "knowledge-base", "ide", "cli"]
dependencies = [
    "mcp>=1.23.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0.0",
    "pyyaml>=6.0.0",
    "aiosqlite>=0.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.scripts]
memento = "memento.cli:main"
mcp-memento = "memento.cli:main"

[project.gui-scripts]
memento-gui = "memento.cli:main"

[project.urls]
Homepage = "https://github.com/annibale-x/memento-mcp-server"
Issues = "https://github.com/annibale-x/memento-mcp-server/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["memento*"]

[tool.setuptools.package-data]
"memento" = ["*.yaml", "*.yml", "*.sql", "*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = [".agent", ".data", ".pytest_cache", ".serena", "docs", "utils"]
addopts = "--asyncio-mode=auto"
