[workspace]
members = [".", "stub"]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[package]
name = "memento-mcp-server"
version = "0.2.29"
edition = "2024"
authors = ["Hannibal <annibale.x@gmail.com>"]
description = "Persistent memory for AI agents via MCP."

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"
